--- a/index.html
+++ b/index.html
@@ -1,24 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JCE</title>
     <link rel="stylesheet" href="global.css">
+    <link rel="icon" type="image/png" href="favicon.png">
 </head>
+
 <body>
     <header>
-        <div class="logo">Logo</div>
-        <ul id="site-nav">
-            <a href="/"><li>Home</li></a>
-            <a href="/gallery"><li>Gallery</li></a>
-            <a href="/about"><li>About</li></a>
-            <a href="/contact"><li>Contact</li></a>
-            <a href="/about-me"><li class="last">About Me</li></a>
-        </ul>
+        <div class="container">
+            <div class="logo">Logo</div>
+            <ul id="site-nav">
+                <a href="/">
+                    <li>Home</li>
+                </a>
+                <a href="/gallery/">
+                    <li>Gallery</li>
+                </a>
+                <a href="/about/">
+                    <li>About</li>
+                </a>
+                <a href="/contact/">
+                    <li>Contact</li>
+                </a>
+                <a href="/about/">
+                    <li class="last">About Me</li>
+                </a>
+            </ul>
+            <!--
+            <div class="search-bar">
+                <search>
+                    <form action="/search/">
+                        <input type="search" name="q">
+                    </form>
+                </search>
+            </div>
+            -->
+        </div>
     </header>
-    <div id="webpage"></div>
+    <div id="webpage">Webpage
+        <h3>Services</h3>
+        <div id="services">
+            <a href="/services/">
+                <img src=".png">
+                <h4>Service 1</h4>
+                <p>
+                    <p>This service is service because yes.</p>
+                    <p>You can also...</p>
+                    <p>Do stuff</p>
+                </p>
+            </a>
+            <a href="/services/">
+                <div>Service 2</div>
+            </a>
+            <a href="/services/">
+                <div>Service 3</div>
+            </a>
+            <a href="/services/">
+                <div>Service 4</div>
+            </a>
+            <a href="/services/">
+                <div>Service 5</div>
+            </a>
+        </div>
+    </div>
     <footer></footer>
 </body>
+
 </html>
