--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JCE</title>
-    <link rel="stylesheet" href="global.css">
-    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="stylesheet" href="/styles/global.css">
+    <link rel="icon" type="image/jpg" href="/images/IMG_20251027_160426.jpg">
 </head>
 
 <body>
@@ -42,11 +42,13 @@
             -->
         </div>
     </header>
-    <div id="webpage">Webpage
+    <div id="webpage">
         <h3>Services</h3>
         <div id="services">
             <a href="/services/">
-                <img src=".png">
+                <div class="serv-img s1">
+                </div>
+                
                 <h4>Service 1</h4>
                 <p>
                     <p>This service is service because yes.</p>
