--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JCE</title>
-    <link rel="stylesheet" href="./styles/global.css">
-    <link rel="icon" type="image/jpg" href="./images/IMG_20251027_160426.jpg">
+    <link rel="stylesheet" href="/styles/global.css">
+    <link rel="icon" type="image/jpg" href="/images/IMG_20251027_160426.jpg">
 </head>
 
 <body>
@@ -15,19 +15,19 @@
         <div class="container">
             <div class="logo">Logo</div>
             <ul id="site-nav">
-                <a href="./">
+                <a href="/">
                     <li>Home</li>
                 </a>
-                <a href="./gallery/">
+                <a href="/gallery/">
                     <li>Gallery</li>
                 </a>
-                <a href="./about/">
+                <a href="/about/">
                     <li>About</li>
                 </a>
-                <a href="./contact/">
+                <a href="/contact/">
                     <li>Contact</li>
                 </a>
-                <a href="./about/">
+                <a href="/about/">
                     <li class="last">About Me</li>
                 </a>
             </ul>
@@ -45,7 +45,7 @@
     <div id="webpage">
         <h3>Services</h3>
         <div id="services">
-            <a href="./services/">
+            <a href="/services/">
                 <div class="serv-img s1">
                 </div>
                 
@@ -56,16 +56,16 @@
                     <p>Do stuff</p>
                 </p>
             </a>
-            <a href="./services/">
+            <a href="/services/">
                 <div>Service 2</div>
             </a>
-            <a href="./services/">
+            <a href="/services/">
                 <div>Service 3</div>
             </a>
-            <a href="./services/">
+            <a href="/services/">
                 <div>Service 4</div>
             </a>
-            <a href="./services/">
+            <a href="/services/">
                 <div>Service 5</div>
             </a>
         </div>
