background image and better layout

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/styles/global.css">
     <link rel="icon" type="image/jpg" href="/images/IMG_20251027_160426.jpg">
 </head>
-
+<div id="background-image"></div>
 <body>
     <header>
         <div class="container">
@@ -43,8 +43,8 @@
         </div>
     </header>
     <div id="webpage">
-        <h3>Services</h3>
-        <div id="services">
+        <h3 class="container" style="justify-content: center !important;">Services</h3>
+        <div id="services" class="container">
             <a href="/services/">
                 <div class="serv-img s1">
                 </div>
