--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
 <body>
     <header>
         <div class="container">
-            <div class="logo">Logo</div>
+            <a href=""><div class="logo"><!--Logo--><img src="images/IMG_20251027_160426.jpg"></div></a>
+            <select id="middle-part">
+                <option>English</option>
+            </select>
             <ul id="site-nav">
-                <a href="/">
+                <a href="">
                     <li>Home</li>
                 </a>
                 <a href="gallery/">
@@ -43,7 +46,7 @@
         </div>
     </header>
     <div id="webpage">
-        <h3 class="container" style="justify-content: center !important;">Services</h3>
+        <h3 class="container section" style="justify-content: center !important;">Services</h3>
         <div id="services" class="container">
             <a href="services/">
                 <div class="serv-img s1">
@@ -68,6 +71,10 @@
             <a href="services/">
                 <div>Service 5</div>
             </a>
+        </div>
+        <div id="About" class="section">
+            <h3>Some "about" stuff here.</h3>
+            <p>You will enter your text here.</p>
         </div>
     </div>
     <footer></footer>
