Made it gray (Except links)

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
         <div id="About" class="section">
             <h3>Some "about" stuff here.</h3>
             <p>You will enter your text here.</p>
+            <p><a>And maybe add links</a></p>
         </div>
     </div>
     <footer></footer>
