gallery and fixes

--- a/index.html
+++ b/index.html
@@ -5,20 +5,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JCE</title>
+    <title>Joe's Competition Engines - "your text here."</title>
     <link rel="stylesheet" href="styles/global.css">
-    <link rel="icon" type="image/jpg" href="images/IMG_20251027_160426.jpg">
+    <link rel="icon" type="image/jpg" href="images/logo.jpg">
 </head>
 <div id="background-image"></div>
 <body>
     <header id="header">
         <div id="innerwrap" class="container">
-            <a href=""><div class="logo"><!--Logo--><img src="images/IMG_20251027_160426.jpg"></div></a>
+            <a href=""><div class="logo"><!--Logo--><img src="images/logo.jpg"></div></a>
             <button id="toggle-menu" onclick="mobileHandler()">V</button>
             <select id="middle-part">
                 <option>English</option>
             </select>
             <ul id="site-nav">
+                <p id="scroll-notice">(Scroll this box)</p>
                 <a href="">
                     <li>Home</li>
                 </a>
