--- a/gallery/index.html
+++ b/gallery/index.html
@@ -5,35 +5,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Joe's Competition Engines - "your text here."</title>
+    <title>Gallery - Joe's Competition Engines - "your text here."</title>
     <link rel="stylesheet" href="../styles/global.css">
     <link rel="stylesheet" href="../styles/gallery.css">
-    <link rel="icon" type="image/jpg" href="images/logo.jpg">
+    <link rel="icon" type="image/jpg" href="../images/logo.jpg">
 </head>
 <div id="background-image"></div>
+
 <body>
     <header id="header">
         <div id="innerwrap" class="container">
-            <a href=""><div class="logo"><!--Logo--><img src="../images/logo.jpg"></div></a>
+            <a href="../">
+                <div class="logo"><!--Logo--><img src="../images/logo.jpg"></div>
+            </a>
             <button id="toggle-menu" onclick="mobileHandler()">V</button>
             <select id="middle-part">
                 <option>English</option>
             </select>
             <ul id="site-nav">
                 <p id="scroll-notice">(Scroll this box)</p>
-                <a href="">
+                <a href="../">
                     <li>Home</li>
                 </a>
-                <a href="gallery/">
+                <a href="">
                     <li>Gallery</li>
                 </a>
-                <a href="about/">
+                <a href="../about/">
                     <li>About</li>
                 </a>
-                <a href="contact/">
+                <a href="../contact/">
                     <li>Contact</li>
                 </a>
-                <a href="about/">
+                <a href="../about/">
                     <li class="last">About Me</li>
                 </a>
             </ul>
@@ -52,9 +55,33 @@
         <h3 class="section" style="justify-content: center !important;">Gallery</h3>
         <div id="gallery" class="section">
             <div class="img-container">
-                <h3>Picture name</h3>
                 <div>
-                    <div class="gal-img" src=".png" alt="picture"></div>
+                    <h3>Picture name</h3>
+                    <div>
+                        <div class="gal-img" src=".png" alt="picture"></div>
+                    </div>
+                </div>
+                <div class="description">
+                </div>
+            </div>
+            <div class="img-container">
+                <div>
+                    <h3>Picture name</h3>
+                    <div>
+                        <div class="gal-img" src=".png" alt="picture"></div>
+                    </div>
+                </div>
+                <div class="description">
+                </div>
+            </div>
+            <div class="img-container">
+                <div>
+                    <h3>Picture name</h3>
+                    <div>
+                        <div class="gal-img" src=".png" alt="picture"></div>
+                    </div>
+                </div>
+                <div class="description">
                 </div>
             </div>
         </div>
